# bioconvert

./: .codacy.yml  .coveragerc  .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  CONTRIB.rst  CONTRIBUTING.rst  COPYRIGHT  Dockerfile  Dockerfile.disabled  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  Singularity  Snakemake_benchmark  bioconvert.json  environment.yml  environment_rtd.yml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  requirements_go.sh  requirements_tool_linux_only.txt  requirements_tools.txt  requirements_tools.txt~  requirements_tools_linux_only.txt  sam2bam.py  setup.cfg  setup.py  spec-file.txt
.github/: issue_template.md
Singularity/: README.rst  Singularity  Singularity.0_1_0  Singularity.0_1_3  Singularity.0_4_1  Singularity.0_4_2  Singularity.0_5_0  environment_0.6.2.yml
bioconvert/: #bam2bed.py#  __init__.py  abi2fasta.py  abi2fastq.py  abi2qual.py  bam2bed.py  bam2bedgraph.py  bam2bigwig.py  bam2bigwig.py~  bam2cov.py  bam2cram.py  bam2fasta.py  bam2fastq.py  bam2json.py  bam2sam.py  bam2tsv.py  bam2wiggle.py  bcf2vcf.py  bcf2wiggle.py  bed2wiggle.py  bedgraph2bed.py  bedgraph2bigwig.py  bedgraph2cov.py  bedgraph2wiggle.py  bigbed2bed.py  bigbed2wiggle.py  bigwig2bedgraph.py  bigwig2wiggle.py  bplink2plink.py  bplink2vcf.py  bz22gz.py  clustal2fasta.py  clustal2nexus.py  clustal2phylip.py  clustal2stockholm.py  cram2bam.py  cram2fasta.py  cram2fastq.py  cram2sam.py  csv2tsv.py  (+86 more)
doc/: CONTRIB.rst  ChangeLog.rst  Makefile  Snakefile  Snakefile_benchmark  Snakefile_paper  benchmarking.rst  bibliography.rst  conf.py  create_automodules_allconverters.py  create_graph.py  developer_guide.rst  faqs.rst  formats.rst  glossary.rst  index.rst  install_singularity.sh  installation.rst  manuscript_figure.ipynb  not_provided.rst  ref_converters.rst  ref_core.rst  ref_io.rst  references.rst  script.sh  script2.sh  stats.csv  tutorial.rst  user_guide.rst
examples/: README.txt  conversion.dot  plot_benchmark.py  plot_graph.py  plot_graph_clustered.py  plot_graph_colored.py  plot_methods.py  test.cov
notebooks/: benchmarking.ipynb
singularity/: Singularity  Singularity.0_2_0  Singularity.0_3_0  Singularity.0_4_0
test/: conversion.dot  decorators_for_tests.py  test_abi2fasta.py  test_abi2fastq.py  test_abi2qual.py  test_bam2bed.py  test_bam2bedgraph.py  test_bam2bigwig.py  test_bam2bigwig.py~  test_bam2cov.py  test_bam2cram.py  test_bam2fasta.py  test_bam2fastq.py  test_bam2json.py  test_bam2sam.py  test_bam2tsv.py  test_bam2wiggle.py  test_bcf2vcf.py  test_bcf2wiggle.py  test_bed2wiggle.py  test_bedgraph2bed.py  test_bedgraph2bigwig.py  test_bedgraph2cov.py  test_bedgraph2wiggle.py  test_benchmark.py  test_bigbed2bed.py  test_bigbed2wiggle.py  test_bigwig2bedgraph.py  test_bigwig2wiggle.py  test_bioconvert_utilities.py  test_bplink2plink.py  test_bplink2vcf.py  test_bz22gz.py  (+99 more)
(+377 files in other folders)
